Fix case sensitivity issue in tattoo-flash.html

--- a/tattoo-flash.html
+++ b/tattoo-flash.html
@@ -264,7 +264,7 @@ dMP     dMMMMMP dMP dMP  VMMMP" dMP dMP        dMMMMP"  VMMMP"  VMMMP" dMP dMP
 </div>
     </div>
   <script src="randomImage.js"></script>
-  <script src="flipbook.js"></script>
+  <script src="flipBook.js"></script>
   <script>
         document.addEventListener('DOMContentLoaded', () => {
             const imagePaths = [
