Fix case sensitivity issue in test-page.html and ensure flipBook.js is referenced correctly

--- a/test-page.html
+++ b/test-page.html
@@ -194,6 +194,6 @@
         </div>
     </div>
 
-    <script src="flipbook.js"></script>
+    <script src="flipBook.js"></script>
 </body>
 </html>
